--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -25,37 +25,37 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Accounts created</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .account_created_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .account_created_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Accounts deleted</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .account_deleted_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .account_deleted_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">LPAs added</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .lpas_added }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .lpas_added }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Property and Finance LPA added</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .added_lpa_type_pfa_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .added_lpa_type_pfa_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Health and Welfare LPA added</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .added_lpa_type_hw_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .added_lpa_type_hw_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">LPAs deleted</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .lpa_removed_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .lpa_removed_event }}</td>
                 {{end}}
             </tr>
             </tbody>
@@ -76,31 +76,31 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Activation key requested</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .account_activated_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .account_activated_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Key requested for Property and Finance</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .full_match_key_request_success_lpa_type_pfa_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .full_match_key_request_success_lpa_type_pfa_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Key requested for Health and Welfare</th>
                 {{range .Result }}
-                    <td class="govuk-table__cell">{{ .full_match_key_request_success_lpa_type_hw_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .full_match_key_request_success_lpa_type_hw_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Key requested for overseas</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .user_abroad_address_request_success_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .user_abroad_address_request_success_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">LPAs submitted for cleansing</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .older_lpa_needs_cleansing_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .older_lpa_needs_cleansing_event }}</td>
                 {{end}}
             </tr>
             </tbody>
@@ -121,25 +121,25 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Number of Access codes created</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .viewer_codes_created }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .viewer_codes_created }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Number of access code views</th>
                 {{ range .Result }}
-                    <td class="govuk-table__cell">{{ .viewer_codes_viewed }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .viewer_codes_viewed }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Number of access codes viewed expired</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .view_lpa_share_code_expired_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .view_lpa_share_code_expired_event }}</td>
                 {{end}}
             </tr>
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Number of Access codes cancelled</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .view_lpa_share_code_cancelled_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .view_lpa_share_code_cancelled_event }}</td>
                 {{end}}
             </tr>
             </tbody>
@@ -160,7 +160,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Download Summary</th>
                 {{range .Result}}
-                    <td class="govuk-table__cell">{{ .download_summary_event }}</td>
+                    <td class="govuk-table__cell">{{ printf "%.0f" .download_summary_event }}</td>
                 {{end}}
             </tr>
             </tbody>
