--- a/service-admin/web/templates/systemmessage.page.gohtml
+++ b/service-admin/web/templates/systemmessage.page.gohtml
@@ -13,10 +13,6 @@ Set the system message
 </label>
 </h1>
 
-<div id="search-hint" class="govuk-hint moj-search__hint">
-You can search by email address, activation key or LPA number
-</div>
-
 {{ if .Errors.Query }}
 <span class="govuk-error-message">
 <span class="govuk-visually-hidden">Error:</span> {{ .Errors.Query }}
@@ -25,7 +21,7 @@ You can search by email address, activation key or LPA number
 
 <input class="govuk-input {{ if .Errors.Query }}govuk-input--error{{ end }} moj-search__input govuk-!-width-one-half" id="query" name="query" type="search" value="{{ .Query }}" aria-describedby="search-hint" autocomplete="off">
 <button class="govuk-button moj-search__button " data-module="govuk-button">
-Search
+Set system message
 </button>
 </div>
 </form>
