gohtml template layout

--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -39,7 +39,7 @@
             </li>
 
             <li class="moj-primary-navigation__item">
-              <a class="moj-primary-navigation__link" {{ if eq .Path "/system-message" }}aria-current="page"{{ end }} href="/system-message">Set System Message</a>
+              <a class="moj-primary-navigation__link" {{ if eq .Path "/system-message" }}aria-current="page"{{ end }} href="/system-message">System Message</a>
             </li>
           </ul>
 
