--- a/service-front/app/src/Actor/templates/actor/one-login.html.twig
+++ b/service-front/app/src/Actor/templates/actor/one-login.html.twig
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="govuk-width-container">
-        <main class="govuk-main-wrapper" id="main-content" role="main">
+        <main class="govuk-main-wrapper" id="main-content" role="main" aria-label="Main content">
             <div class="govuk-grid-row">
                 {{ govuk_error_summary(form) }}
                 {{ govuk_form_open(form) }}
@@ -51,7 +51,7 @@
                             data-prevent-double-click="true"
                             name="sign-in-one-login"
                             type="submit"
-                            class="govuk-button govuk-button--start govuk-!-margin-bottom-1">
+                            class="govuk-button govuk-button--start govuk-!-margin-bottom-1" aria-label="Continue with GOV.UK One Login">
                         {% trans %}Continue{% endtrans %}
                         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
