--- a/service-front/app/src/Actor/templates/actor/one-login.html.twig
+++ b/service-front/app/src/Actor/templates/actor/one-login.html.twig
@@ -20,7 +20,7 @@
                     <div class="govuk-inset-text">
                         {% trans %}
                             To make an LPA online, or to continue to make an LPA you’ve started, go to the
-                            <a href="url" class="govuk-link">Make a lasting power of attorney service.</a>
+                            <a href="https://www.gov.uk/power-of-attorney/make-lasting-power" class="govuk-link">Make a lasting power of attorney service.</a>
                         {% endtrans %}
                     </div>
                     <p class="govuk-body-l">
