--- a/service-front/app/src/Actor/templates/actor/one-login.html.twig
+++ b/service-front/app/src/Actor/templates/actor/one-login.html.twig
@@ -18,9 +18,9 @@
                 <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-xl">{% trans %}Sign in to this service{% endtrans %}</h1>
                     <div class="govuk-inset-text">
-                        {% trans %}
+                        {% trans with {'%link%': 'https://www.gov.uk/power-of-attorney/make-lasting-power'} %}
                             To make an LPA online, or to continue to make an LPA you’ve started, go to the
-                            <a href="https://www.gov.uk/power-of-attorney/make-lasting-power" class="govuk-link">Make a lasting power of attorney service.</a>
+                            <a href="%link%" class="govuk-link">Make a lasting power of attorney service.</a>
                         {% endtrans %}
                     </div>
                     <p class="govuk-body-l">
