--- a/service-front/app/src/Actor/templates/actor/add-lpa-triage.html.twig
+++ b/service-front/app/src/Actor/templates/actor/add-lpa-triage.html.twig
@@ -120,9 +120,9 @@
                     <div class="moj-button-menu">
                         <div class="moj-button-menu__wrapper">
 
-                            <a role="button" type="submit" data-prevent-double-click="true" draggable="false" class="govuk-button moj-button-menu__item" data-module="govuk-button">
+                            <button role="button" type="submit" data-prevent-double-click="true" draggable="false" class="govuk-button moj-button-menu__item" data-module="govuk-button">
                                 {% trans %}Continue{% endtrans %}
-                            </a>
+                            </button>
                             <a href="{{ path('lpa.dashboard') }}"  role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
                                 {% trans %}Cancel{% endtrans %}
                             </a>
