--- a/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
@@ -37,13 +37,19 @@
                         {{ govuk_form_element(form.get('__csrf')) }}
                         {{ govuk_form_element(form.get('actor_lpa_token')) }}
 
-                        <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false" class="govuk-button govuk-button govuk-button--secondary govuk-!-margin-right-1">
-                            {% trans %}Cancel{% endtrans %}
-                        </a>
+                    <div class="moj-button-menu">
+                        <div class="moj-button-menu__wrapper">
 
-                        <button data-prevent-double-click="true" type="submit" class="govuk-button govuk-button--warning govuk-!-margin-right-1 ">
-                            {% trans %}Yes, remove LPA{% endtrans %}
-                        </button>
+                            <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false" class="govuk-button moj-button-menu__item  " data-module="govuk-button">
+                                {% trans %}Cancel{% endtrans %}
+                            </a>
+
+                            <button  data-prevent-double-click="true" type="submit" draggable="false" class="govuk-button govuk-button--warning moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
+                                {% trans %}Yes, remove LPA{% endtrans %}
+                            </button>
+
+                        </div>
+                    </div>
 
                     {{ govuk_form_close() }}
                 </div>
