--- a/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
@@ -91,12 +91,19 @@
 
                     {{ govuk_form_element(form.get('__csrf')) }}
 
-                    <button data-prevent-double-click="true" type="submit" class="govuk-button">
-                        {% trans %}Continue{% endtrans %}</button>
+                    <div class="moj-button-menu">
+                        <div class="moj-button-menu__wrapper">
 
-                    <a href="{{ path('lpa.dashboard') }}" role="button" class="govuk-button govuk-button--secondary">
-                        {% trans %}Cancel{% endtrans %}
-                    </a>
+                            <button role="button" data-prevent-double-click="true" type="submit" draggable="false" class="govuk-button moj-button-menu__item  " data-module="govuk-button">
+                                {% trans %}Continue{% endtrans %}</button>
+                            </button>
+
+                            <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
+                                {% trans %}Cancel{% endtrans %}
+                            </a>
+                        </div>
+                    </div>
+
 
                     {{ govuk_form_close() }}
                 </div>
