reformatting twig files

--- a/service-front/app/src/Actor/templates/actor/activation-key-request-received.html.twig
+++ b/service-front/app/src/Actor/templates/actor/activation-key-request-received.html.twig
@@ -29,10 +29,14 @@
 
                     <div class="moj-button-menu">
                         <div class="moj-button-menu__wrapper">
-                            <a href="{{ path('lpa.add-by-paper', {}, {'startAgain': 'true'})}}" role="button" draggable="false" class="govuk-button moj-button-menu__item  " data-module="govuk-button">
+                            <a href="{{ path('lpa.add-by-paper', {}, {'startAgain': 'true'}) }}" role="button"
+                               draggable="false" class="govuk-button moj-button-menu__item  "
+                               data-module="govuk-button">
                                 {% trans %}Request another activation key{% endtrans %}
                             </a>
-                            <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
+                            <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false"
+                               class="govuk-button moj-button-menu__item govuk-button--secondary "
+                               data-module="govuk-button">
                                 {% trans %}Back to your LPAs{% endtrans %}
                             </a>
                         </div>
