--- a/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
@@ -6,7 +6,7 @@
     <div class="govuk-width-container">
         <div role="navigation" aria-labelledby="back-link-navigation">
             <a href="{{ path('lpa.add-by-key') }}" class="govuk-back-link" id="back-link-navigation">
-            {% trans %}Back{% endtrans %}</a>
+                {% trans %}Back{% endtrans %}</a>
         </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -72,8 +72,8 @@
                     </div>
 
                     <details class="govuk-details" data-module="govuk-details" data-gaEventType="onClick"
-                         data-gaAction="Details" data-gaCategory="Wrong Details"
-                         data-gaLabel="What to do if the details are wrong">
+                             data-gaAction="Details" data-gaCategory="Wrong Details"
+                             data-gaLabel="What to do if the details are wrong">
                         <summary class="govuk-details__summary">
                             <span class="govuk-details__summary-text">
                                 {% trans %}What to do if the details are wrong{% endtrans %}
@@ -81,7 +81,7 @@
                         </summary>
                         <div class="govuk-details__text">
                             <p>
-                            {% trans %}If the information is wrong, or if a name is misspelt, please call us:{% endtrans %}
+                                {% trans %}If the information is wrong, or if a name is misspelt, please call us:{% endtrans %}
                             </p>
                             {{ include('@partials/contact-details/telephone.html.twig', {heading_level: 2 }) }}
                         </div>
@@ -94,11 +94,14 @@
                     <div class="moj-button-menu">
                         <div class="moj-button-menu__wrapper">
 
-                            <button role="button" data-prevent-double-click="true" type="submit" draggable="false" class="govuk-button moj-button-menu__item  " data-module="govuk-button">
+                            <button role="button" data-prevent-double-click="true" type="submit" draggable="false"
+                                    class="govuk-button moj-button-menu__item  " data-module="govuk-button">
                                 {% trans %}Continue{% endtrans %}</button>
                             </button>
 
-                            <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false" class="govuk-button moj-button-menu__item govuk-button--secondary " data-module="govuk-button">
+                            <a href="{{ path('lpa.dashboard') }}" role="button" draggable="false"
+                               class="govuk-button moj-button-menu__item govuk-button--secondary "
+                               data-module="govuk-button">
                                 {% trans %}Cancel{% endtrans %}
                             </a>
                         </div>
