Tweak login template lnf

--- a/service-front/app/src/Actor/templates/actor/one-login.html.twig
+++ b/service-front/app/src/Actor/templates/actor/one-login.html.twig
@@ -23,17 +23,17 @@
                             <a href="%link%" class="govuk-link">Make a lasting power of attorney service.</a>
                         {% endtrans %}
                     </div>
-                    <p class="govuk-body-l">
+                    <p class="govuk-body">
                         {% trans %}
                             You’ll need to sign in to the Use a lasting power of attorney service using GOV.UK One Login.
                         {% endtrans %}
                     </p>
-                    <p class="govuk-body-l">
+                    <p class="govuk-body">
                         {% trans %}
                             If you’ve not used Gov.uk One Login before, you can set up your access on the next page.
                         {% endtrans %}
                     </p>
-                    <p class="govuk-body-l">
+                    <p class="govuk-body">
                         {% trans %}
                             GOV.UK One Login is the new way to sign in to government services in one place, using the same email address and password.
                         {% endtrans %}
@@ -57,7 +57,7 @@
                             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
                         </svg>
                     </button>
-                    <p class="govuk-body govuk-!-font-size-19">{% trans %}with GOV.UK One Login{% endtrans %}</p>
+                    <p class="govuk-body-s">{% trans %}with GOV.UK One Login{% endtrans %}</p>
                 </div>
                 {{ govuk_form_close() }}
             </div>
